fix(workspaces): Gap between workspaces was too big refactor(files): Better File Structure

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@
 }
 
 .workspace-box {
-	min-height: 60px;
-	min-width: 60px;
+	/*min-height: 60px;*/
+	min-width: 35px;
 }
 
 .system-tray-icon {
